          something as opposed to nothing

2009-08-16  Carsten Haitzler (The Rasterman)

	* Fix documentation of eet_data_write() and eet_write() for return
          value to return # of bytes written, not 1 or 0

2009-08-16  Vincent Torri

	* Fix build with suncc (missing alloca() declaration in eet_cipher.c)

2009-09-15  Mathieu Taillefumier

	* Use new Eina_Log infrastructure to report error.

2009-09-15  Cedric BAIL

	* Remove apparently useless eet_freeleak_* from eet_data.

2009-09-29  Cedric BAIL

	* Add Fixed Point support and make it possible to switch from float
	and double to any fixed point variant supported by eina.

	Note: File saved with fixed point could be read by older version of
	eet library with EET_T_DOUBLE type.

2009-10-01  Mathieu Taillefumier

	* remove useless Eina_Log macros.

2009-10-01  Vincent Torri

	* Check the returned value of eet_init() in the binary.
	* Use binary mode of fopen() in eet_main() for Windows compatibility.

2009-10-09  Vincent Torri

	* initialize eina first in eet_init().

2009-11-02  Vincent Torri

	* allow generation of one single file with all source code in it.
	See configure help to enable it (--enable-amalgamation).

2009-11-11  Vincent Torri

	* Add check on libgcrypt library in configure. Needed when GNUtls
	support is enabled.

2009-12-02  Carsten Haitzler (The Rasterman)

        * Release eet 1.2.3

2009-12-03  Cedric BAIL

	* Make all operation on Eet_File thread safe.

2009-12-07  Cedric BAIL

	* Fix error when retrieving a different float type than the stored one.
	* Reduce convertion with a little memory overhead.

2009-12-07  Vincent Torri

	* Include winsock2.h in eet_image.c for htonl definition on Windows.
	* Fix Visual Studio project files

2009-12-11  Cedric BAIL

	* Make eet_data_descriptor_free safe to call on NULL pointer.

2009-12-21  Cedric BAIL

	* More work on eet_node dump code.

2009-12-28  Cedric BAIL

	* Add fully functionnal eet_node dump code.
